[tool.poetry]
name = "fast-manager"
version = "0"
description = "Create Python Web Fast, Manage Easily"
authors = ["weekwith.me <leedobby@weekwith.me>"]
homepage = "https://github.com/0417taehyun/fast-manager"
documentation = "https://fastmanager.weekwith.me"
repository = "https://github.com/0417taehyun/fast-manager"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mkdocs = "^1.2.3"
mkdocs-material = "^7.3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
